--- a/mobile/3-Tasks/tasks.html
+++ b/mobile/3-Tasks/tasks.html
@@ -503,6 +503,7 @@ body {
     <div class="footer">
         <a href="/BeeMazing-Y1/mobile/2-UserProfiles/userAdmin.html" class="footer-icon" id="homeLink" aria-label="Home">
             <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
+            <span>w77</span>
         </a>
         <a href="/BeeMazing-Y1/mobile/3-Tasks/tasks.html" class="footer-icon" aria-label="Tasks">
             <img src="/BeeMazing-Y1/mobile/1-Home/TasksBtn.png" alt="Tasks" />
@@ -595,7 +596,7 @@ if (typeof calculateIndividualProgress === 'undefined') {
 
 
 
-const visibleTasks = tasks.filter(task => {
+        const visibleTasks = tasks.filter(task => {
     if (!task.date) return false;
 
     // Parse the From/To range
@@ -611,22 +612,21 @@ const visibleTasks = tasks.filter(task => {
         return specificDates.includes(selectedDate);
     }
 
-    // If Specific Days exist, use that second
-    if (task.specificDays) {
-        let days = task.specificDays;
+    // If Days of Week exist, use that second
+    if (task.daysOfWeek && !task.daysOfWeek.includes("Any")) {
+        let days = task.daysOfWeek;
         if (typeof days === "string") {
             days = days.split(",").map(d => d.trim()).filter(d => d);
         }
         if (Array.isArray(days) && days.length > 0) {
             const dayOfWeek = selected.toLocaleDateString(undefined, { weekday: "long" });
-            return days.includes(dayOfWeek) && inRange; // ✅ Must still be within From-To range
+            return days.includes(dayOfWeek) && inRange; // Must be within From-To range
         }
     }
 
-    // Default case: From-To
+    // Default case: From-To (if "Any" or no specific days)
     return inRange;
 });
-
 
 
 
