--- a/mobile/3-Tasks/addtasks.html
+++ b/mobile/3-Tasks/addtasks.html
@@ -989,6 +989,7 @@ style="width: 60px; text-align: center; padding: 6px; border: 2px solid var(--pr
 
 
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <script src="/BeeMazing-Y1/shared/taskrotations.js?t=${Date.now()}"></script>
     <script>
 
 document.addEventListener("DOMContentLoaded", async () => {
