--- a/mobile/2-UserProfiles/users.html
+++ b/mobile/2-UserProfiles/users.html
@@ -1122,6 +1122,7 @@
     <div class="footer">
       <a href="#" id="homeButton" class="footer-icon active" aria-label="Home">
           <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
+          <span>q</span>
       </a>
       <a href="#" id="tasksButton" class="footer-icon" aria-label="Tasks">
           <img src="/BeeMazing-Y1/mobile/1-Home/TasksBtn.png" alt="Tasks" />
@@ -1137,7 +1138,7 @@
 
 
 
-
+  <script src="/BeeMazing-Y1/shared/taskrotations.js?t=${Date.now()}"></script>
 
     <script>
 
@@ -1882,7 +1883,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
         async function loadOverallProgress(userName) {
   const adminEmail = localStorage.getItem("currentAdminEmail");
-  const todayStr = new Date().toLocaleDateString("sv-SE"); // "YYYY-MM-DD"
+  const selectedDay = document.querySelector(".day.selected")?.dataset.date || new Date().toLocaleDateString("sv-SE"); // "YYYY-MM-DD"
   let totalTasks = 0;
   let completedTasks = 0;
   let totalDos = 0;
@@ -1897,28 +1898,7 @@ document.addEventListener("DOMContentLoaded", () => {
     const todayTasks = tasks.filter(task => {
       if (!task.users || !task.title || !task.date) return false;
       if (!task.users.includes(userName)) return false;
-
-      const [startStr, endStr] = task.date.split(" to ");
-      const startDate = new Date(startStr);
-      const endDate = endStr ? new Date(endStr) : new Date(3000, 0, 1);
-      const today = new Date(todayStr);
-
-      if (today < startDate || today > endDate) return false;
-
-      // Specific Dates
-      if (task.specificDates) {
-        const specificDates = task.specificDates.split(",").map(d => d.trim());
-        return specificDates.includes(todayStr);
-      }
-
-      // Specific Days
-      if (task.specificDays) {
-        const days = typeof task.specificDays === "string" ? task.specificDays.split(",").map(d => d.trim()) : task.specificDays;
-        const dayOfWeek = today.toLocaleDateString(undefined, { weekday: "long" });
-        return days.includes(dayOfWeek);
-      }
-
-      return true;
+      return filterTasksForDate(task, selectedDay);
     });
 
     totalTasks = todayTasks.length;
@@ -1934,8 +1914,8 @@ document.addEventListener("DOMContentLoaded", () => {
         requiredTimes = task.users.length;
       }
 
-      const completionsToday = task.completions?.[todayStr] || [];
-      const pendingToday = task.pendingCompletions?.[todayStr] || [];
+      const completionsToday = task.completions?.[selectedDay] || [];
+      const pendingToday = task.pendingCompletions?.[selectedDay] || [];
       const userCompletionCount = completionsToday.filter(u => u === userName).length;
       const userPendingCount = pendingToday.filter(u => u === userName).length;
       const userTotal = userCompletionCount + userPendingCount;
@@ -1948,7 +1928,6 @@ document.addEventListener("DOMContentLoaded", () => {
 
     const progressPercent = totalDos > 0 ? (completedDos / totalDos) * 100 : 0;
 
-
     document.getElementById("taskSummary").textContent = `Tasks: ${completedTasks}/${totalTasks}`;
     document.getElementById("doSummary").textContent = `Do's Completed: ${completedDos}/${totalDos}`;
     document.getElementById("progressBar").style.width = `${progressPercent}%`;
@@ -1959,8 +1938,6 @@ document.addEventListener("DOMContentLoaded", () => {
     document.getElementById("doSummary").textContent = "";
   }
 }
-
-
 
         </script>
 
