--- a/mobile/2-UserProfiles/userTasks.html
+++ b/mobile/2-UserProfiles/userTasks.html
@@ -691,6 +691,7 @@
       </a>
       <a href="#" id="tasksButton" class="footer-icon" aria-label="Tasks">
           <img src="/BeeMazing-Y1/mobile/1-Home/TasksBtn.png" alt="Tasks" />
+          <span>a</span>
       </a>
       <a href="#" id="marketButton" class="footer-icon" aria-label="Market">
           <img src="/BeeMazing-Y1/mobile/1-Home/MarketBtn.png" alt="Market" />
@@ -700,7 +701,7 @@
     
 
 
-
+  <script src="/BeeMazing-Y1/shared/taskrotations.js?t=${Date.now()}"></script>
 
 
     <script>
@@ -927,8 +928,6 @@ async function loadUserTasks(userName, selectedDate = new Date().toLocaleDateStr
         userTasksDiv.appendChild(taskDiv);
     }
 }
-
-
 
 
 
