--- a/mobile/2-UserProfiles/userTasks.html
+++ b/mobile/2-UserProfiles/userTasks.html
@@ -691,7 +691,7 @@
       </a>
       <a href="#" id="tasksButton" class="footer-icon" aria-label="Tasks">
           <img src="/BeeMazing-Y1/mobile/1-Home/TasksBtn.png" alt="Tasks" />
-          <span>a</span>
+          <span>a1</span>
       </a>
       <a href="#" id="marketButton" class="footer-icon" aria-label="Market">
           <img src="/BeeMazing-Y1/mobile/1-Home/MarketBtn.png" alt="Market" />
@@ -793,6 +793,10 @@ if (marketButton) {
 
 
 
+
+
+
+
 async function loadUserTasks(userName, selectedDate = new Date().toLocaleDateString("sv-SE")) {
     const userTasksDiv = document.getElementById("userTasks");
     userTasksDiv.innerHTML = "<p>Loading tasks...</p>";
@@ -811,50 +815,10 @@ async function loadUserTasks(userName, selectedDate = new Date().toLocaleDateStr
         return;
     }
 
-    function parseLocalDate(dateStr) {
-        if (!dateStr) return new Date(3000, 0, 1);
-        const parts = dateStr.split("-");
-        if (parts.length !== 3) return new Date(3000, 0, 1);
-        const [year, month, day] = parts.map(Number);
-        if (isNaN(year) || isNaN(month) || isNaN(day)) return new Date(3000, 0, 1);
-        const date = new Date(year, month - 1, day);
-        if (isNaN(date.getTime())) return new Date(3000, 0, 1);
-        return date;
-    }
-
     const userTasks = tasks.filter(task => {
         if (!task || !task.users || !task.title || !task.date) return false;
         if (!task.users.includes(userName)) return false;
-
-        const [startStr, endStr] = task.date.split(" to ");
-        const startDate = parseLocalDate(startStr);
-        const endDate = endStr ? parseLocalDate(endStr) : new Date(3000, 0, 1);
-        const currentDate = parseLocalDate(selectedDate);
-
-        // Check if the selected date is within the From/To range
-        if (currentDate < startDate || currentDate > endDate) return false;
-
-        // Handle Specific Dates mode
-        if (task.specificDates) {
-            const specificDates = task.specificDates.split(",").map(date => date.trim());
-            return specificDates.includes(selectedDate);
-        }
-
-        // Handle Specific Days mode
-        if (task.specificDays) {
-            let days = task.specificDays;
-            if (typeof days === "string") {
-                days = days.split(",").map(d => d.trim()).filter(d => d);
-            }
-            if (Array.isArray(days) && days.length > 0) {
-                const dayOfWeek = currentDate.toLocaleDateString(undefined, { weekday: "long" });
-                return days.includes(dayOfWeek);
-            }
-            return false; // If specificDays is set but invalid or empty, hide the task
-        }
-
-        // Default (From - To mode): Show if within range
-        return true;
+        return filterTasksForDate(task, selectedDate);
     });
 
     userTasksDiv.innerHTML = "";
@@ -928,6 +892,11 @@ async function loadUserTasks(userName, selectedDate = new Date().toLocaleDateStr
         userTasksDiv.appendChild(taskDiv);
     }
 }
+
+
+
+
+
 
 
 
